[gd_scene load_steps=13 format=3 uid="uid://bmifijihnj05v"]

[ext_resource type="Script" path="res://script/game.gd" id="1_ruxqh"]
[ext_resource type="PackedScene" uid="uid://bhnxfc6f7p2q6" path="res://scenes/Game Number.tscn" id="2_61bkf"]
[ext_resource type="Texture2D" uid="uid://c2qrmobax2yos" path="res://sprites/background.jpg" id="2_67m1r"]
[ext_resource type="PackedScene" uid="uid://dfmta8k1wd52u" path="res://scenes/Hand.tscn" id="2_n3oof"]
[ext_resource type="PackedScene" uid="uid://c1g4gsru7vcx3" path="res://scenes/StartScreen.tscn" id="3_4jmsx"]
[ext_resource type="PackedScene" uid="uid://d2s4isee3anlt" path="res://scenes/Deck.tscn" id="4_jiiwo"]
[ext_resource type="AudioStream" uid="uid://iwc372cmi236" path="res://sound/card_background.mp3" id="5_7olmx"]
[ext_resource type="Texture2D" uid="uid://cpycxujqgufp7" path="res://sprites/sound_on.png" id="6_65x7a"]

[sub_resource type="Animation" id="Animation_ikj46"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steal_Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(336, 0)]
}

[sub_resource type="Animation" id="Animation_yp1bs"]
resource_name = "steal_player1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steal_Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-316, 0), Vector2(336, 0)]
}

[sub_resource type="Animation" id="Animation_ql02m"]
resource_name = "steal_player2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Steal_Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(336, 0), Vector2(-316, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rj067"]
_data = {
"RESET": SubResource("Animation_ikj46"),
"steal_player1": SubResource("Animation_yp1bs"),
"steal_player2": SubResource("Animation_ql02m")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_ruxqh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(480, 270)
rotation = 3.14159
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_67m1r")

[node name="Deck" parent="." instance=ExtResource("4_jiiwo")]
position = Vector2(480, 355)

[node name="Player1" parent="." instance=ExtResource("2_n3oof")]
position = Vector2(164, 940)

[node name="Player2" parent="." instance=ExtResource("2_n3oof")]
position = Vector2(816, 940)

[node name="StealAnimations" type="Node2D" parent="."]
position = Vector2(480, 480)

[node name="Steal_Player" type="Node2D" parent="StealAnimations"]
position = Vector2(336, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="StealAnimations"]
libraries = {
"": SubResource("AnimationLibrary_rj067")
}

[node name="Sound" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource("5_7olmx")
volume_db = -15.0
autoplay = true

[node name="Button" type="Button" parent="Sound"]
offset_right = 8.0
offset_bottom = 8.0
icon = ExtResource("6_65x7a")
flat = true

[node name="GameNumber" parent="." instance=ExtResource("2_61bkf")]

[node name="StartScreen" parent="." instance=ExtResource("3_4jmsx")]

[connection signal="mouse_click" from="Deck" to="." method="_on_deck_mouse_click"]
[connection signal="card_activated" from="Player1" to="." method="_on_player_1_card_activated"]
[connection signal="card_activated" from="Player2" to="." method="_on_player_2_card_activated"]
[connection signal="pressed" from="Sound/Button" to="." method="_on_button_pressed"]
